--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 <body>
 
   <div class="hero">
-    <h1>BIRTHDAY PARTY 🎉</h1>
+    <h1>IT'S MY</h1>
+    <h1>BIRTHDAY PARTY</h1>
   </div>
 
   <section id="details">
@@ -208,3 +209,4 @@
 
 </body>
 </html>
+
