--- a/index.html
+++ b/index.html
@@ -1,212 +1,318 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Birthday Party 🎉</title>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  * { box-sizing: border-box; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Party 🎉</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  body {
-    margin: 0;
-    font-family: 'Playfair Display', serif;
-    color: #fff;
-    text-align: center;
-    background: #f7f7f7;
-  }
-
-  .hero {
-    position: relative;
-    height: 100vh;
-    background: url('photo3.jpg') center/cover no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    overflow: hidden;
-  }
-
-  .hero::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0, 0, 0, 0.35);
-    z-index: 0;
-  }
-
-    .hero h1 {
-        position: relative;
-        z-index: 1;
-        margin-top: 2.5em;
-        font-family: 'Great Vibes', cursive;
-        font-size: 4.5em;
-        color: #fff;
-        text-shadow: 0 3px 10px rgba(0,0,0,0.6), 0 0 25px rgba(255,255,255,0.4);
-        letter-spacing: 2px;
-        animation: glow 3s ease-in-out infinite alternate;
-    }
-
-    @keyframes glow {
-        from {
-            text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+    <style>
+        * {
+            box-sizing: border-box;
         }
 
-        to {
-            text-shadow: 0 0 20px #fff, 0 0 40px #ffb6c1, 0 0 60px #ffb6c1;
+        body {
+            margin: 0;
+            font-family: 'Playfair Display', serif;
+            color: #fff;
+            text-align: center;
+            background: #f7f7f7;
         }
-    }
 
+        /* 🌅 Главная секция */
+        .hero {
+            position: relative;
+            height: 100vh;
+            background: url('ноут.jpg') center/cover no-repeat; /* 💻 для ноутбуков */
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            overflow: hidden;
+        }
 
-  #details {
-    background-color: rgba(168, 213, 186, 0.7);
-    color: #333;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 4em 2em;
-  }
+        /* 📱 Для телефонов — другая картинка */
+        @media (max-width: 768px) {
+            .hero {
+                background: url('photo3.jpg') center/cover no-repeat;
+            }
+        }
 
-  #details h1 { font-size: 2.5em; margin-bottom: 0.4em; }
-  #details p.lead { font-size: 1.2em; max-width: 600px; line-height: 1.6; }
-  #details h2 { margin-top: 2em; font-size: 2em; }
-  .lead b { color: #000; }
+        .hero::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.35);
+            z-index: 0;
+        }
 
-  #rsvp {
-    background: #A8D5BA;
-    color: #333;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 4em 2em;
-  }
+        .hero h1 {
+            position: relative;
+            z-index: 1;
+            top: 10%;
+            transform: translateY(-20%);
+            font-family: 'Playfair Display', serif; /* ← теперь обычный шрифт */
+            font-weight: 700;
+            font-size: 4em;
+            color: #fff;
+            text-shadow: 0 3px 10px rgba(0,0,0,0.6), 0 0 25px rgba(255,255,255,0.4);
+            letter-spacing: 2px;
+            animation: glow 3s ease-in-out infinite alternate;
+        }
 
-  #rsvp form {
-    max-width: 400px;
-    width: 100%;
-  }
+        @media (max-width: 600px) {
+            .hero h1 {
+                font-size: 2.3em;
+                top: 5%;
+            }
+        }
 
-  button {
-    margin-top: 1rem;
-    width: 100%;
-  }
+        @keyframes glow {
+            from {
+                text-shadow: 0 0 10px #fff, 0 0 20px #ff69b4, 0 0 30px #ff69b4;
+            }
 
-  /* 🔹 Стиль всплывающего уведомления */
-  #popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.9);
-    background: white;
-    color: #1d3b2a;
-    border-radius: 15px;
-    padding: 2em 3em;
-    box-shadow: 0 5px 25px rgba(0,0,0,0.3);
-    font-size: 1.4em;
-    font-weight: 600;
-    display: none;
-    z-index: 9999;
-    animation: fadeIn 0.3s ease forwards;
-  }
+            to {
+                text-shadow: 0 0 20px #fff, 0 0 40px #ffb6c1, 0 0 60px #ffb6c1;
+            }
+        }
 
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
-    to { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-  }
+        /* 🎈 Раздел с деталями */
+        #details {
+            background-color: rgba(168, 213, 186, 0.7);
+            color: #333;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 4em 2em;
+        }
 
-  @keyframes fadeOut {
-    from { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-    to { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
-  }
+            #details h1 {
+                font-size: 2.5em;
+                margin-bottom: 0.4em;
+            }
 
-  @media (max-width: 600px) {
-    .hero h1 { font-size: 2.1em; margin-top: 3em; }
-    #details h1 { font-size: 1.8em; }
-    #details h2 { font-size: 1.5em; }
-    #details p { font-size: 1em; }
-  }
-</style>
+            #details p.lead {
+                font-size: 1.2em;
+                max-width: 600px;
+                line-height: 1.6;
+            }
+
+        .lead b {
+            color: #000;
+        }
+
+        /* 🎀 Блок с 3 столбцами */
+        .event-info {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 2em;
+            margin-top: 2em;
+            flex-wrap: wrap;
+            color: #222;
+            font-family: 'Playfair Display', serif;
+        }
+
+        .info-item {
+            text-align: center;
+            min-width: 150px;
+        }
+
+            .info-item h3 {
+                font-size: 2.5em;
+                color: #000;
+                margin: 0;
+            }
+
+            .info-item p {
+                margin: 0;
+                font-size: 1.2em;
+                color: #333;
+            }
+
+        .divider {
+            width: 1px;
+            height: 60px;
+            background: #333;
+            opacity: 0.4;
+        }
+
+        @media (max-width: 768px) {
+            .event-info {
+                flex-direction: column;
+                gap: 1em;
+            }
+
+            .divider {
+                display: none;
+            }
+        }
+
+        /* 💌 RSVP форма */
+        #rsvp {
+            background: #A8D5BA;
+            color: #333;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 4em 2em;
+        }
+
+            #rsvp form {
+                max-width: 400px;
+                width: 100%;
+            }
+
+        button {
+            margin-top: 1rem;
+            width: 100%;
+        }
+
+        /* 🌟 Всплывающее уведомление */
+        #popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.9);
+            background: white;
+            color: #1d3b2a;
+            border-radius: 15px;
+            padding: 2em 3em;
+            box-shadow: 0 5px 25px rgba(0,0,0,0.3);
+            font-size: 1.4em;
+            font-weight: 600;
+            display: none;
+            z-index: 9999;
+            animation: fadeIn 0.3s ease forwards;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.8);
+            }
+
+            to {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+        }
+
+        @keyframes fadeOut {
+            from {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1);
+            }
+
+            to {
+                opacity: 0;
+                transform: translate(-50%, -50%) scale(0.8);
+            }
+        }
+
+        @media (max-width: 600px) {
+            #details h1 {
+                font-size: 1.8em;
+            }
+
+            #details p {
+                font-size: 1em;
+            }
+        }
+    </style>
 </head>
 <body>
 
-  <div class="hero">
-    <h1>IT'S MY</h1>
-    <h1>BIRTHDAY PARTY</h1>
-  </div>
+    <!-- 💫 Главный экран -->
+    <div class="hero">
+        <h1>IT'S MY<br>BIRTHDAY PARTY🎉</h1>
+    </div>
 
-  <section id="details">
-    <h1>🎂 Приглашение на День рождения 🎉</h1>
-    <p class="lead">Дорогой друг! Буду рада видеть тебя на своём празднике 💖</p>
+    <!-- 🎂 Подробности -->
+    <section id="details">
+        <h2>🎂 Приглашение на День рождения 🎉</h2>
+        <p class="lead">
+            Вы приглашены на мой юбилей — 50 лет! <br />
+            Обещаю хороший вечер, вкусный ужин и море позитива.<br />
+            Будет музыка, уютная атмосфера и люди, с которыми приятно провести время.<br />
+            Хочу, чтобы этот день запомнился тёплыми разговорами и хорошим настроением.<br />
+            Буду очень рада вас видеть!
+        </p>
 
-    <h2>Когда и где?</h2>
-    <p class="lead">
-      🗓 Дата: <b>25 октября</b><br>
-      🕒 Время: <b>15:00 (по г. Астана)</b><br>
-      📍 Место: <b>VIP KABINET</b><br>
-      📍 Адрес: <b>г. Караганда, Проспект Республики, 22/1</b>
-    </p>
-  </section>
+        <div class="event-info">
+            <div class="info-item">
+                <h3>25</h3>
+                <p>Октября</p>
+            </div>
+            <div class="divider"></div>
+            <div class="info-item">
+                <p>Суббота</p>
+                <p>15:00</p>
+            </div>
+            <div class="divider"></div>
+            <div class="info-item">
+                <p>VIP KABINET</p>
+                <p>Проспект Республики, 22/1</p>
+            </div>
+        </div>
+    </section>
 
-  <section id="rsvp">
-    <h2 class="mb-3">Ответь, пожалуйста 💌</h2>
-    <p class="lead mb-4">Сообщи, придёшь ли ты на праздник:</p>
+    <!-- 💌 RSVP форма -->
+    <section id="rsvp">
+        <h2 class="mb-3">Ответь, пожалуйста 💌</h2>
+        <p class="lead mb-4">Сообщи, придёшь ли ты на праздник:</p>
 
-    <form id="rsvpForm" action="https://formspree.io/f/xeorzjgq" method="POST">
-      <div class="mb-3">
-        <input type="text" name="Имя" class="form-control" placeholder="Твоё имя" required>
-      </div>
+        <form id="rsvpForm" action="https://formspree.io/f/xeorzjgq" method="POST">
+            <div class="mb-3">
+                <input type="text" name="Имя" class="form-control" placeholder="Твоё имя" required>
+            </div>
 
-      <div class="mb-3">
-        <select name="Ответ" class="form-select" required>
-          <option value="">Выбери вариант</option>
-          <option value="Приду 🎉">Приду 🎉</option>
-          <option value="Не приду 😢">Не приду 😢</option>
-          <option value="Отвечу позже 🤔">Отвечу позже 🤔</option>
-        </select>
-      </div>
+            <div class="mb-3">
+                <select name="Ответ" class="form-select" required>
+                    <option value="">Выбери вариант</option>
+                    <option value="Приду 🎉">Приду 🎉</option>
+                    <option value="Не приду 😢">Не приду 😢</option>
+                    <option value="Отвечу позже 🤔">Отвечу позже 🤔</option>
+                </select>
+            </div>
 
-      <button type="submit" class="btn btn-dark btn-lg">Отправить</button>
-    </form>
-  </section>
+            <button type="submit" class="btn btn-dark btn-lg">Отправить</button>
+        </form>
+    </section>
 
-  <!-- Всплывающее окно -->
-  <div id="popup">Спасибо за ответ 💖</div>
+    <!-- 🌸 Всплывающее окно -->
+    <div id="popup">Спасибо за ответ 💖</div>
 
-  <script>
-    document.getElementById('rsvpForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
+    <script>
+        document.getElementById('rsvpForm').addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const form = e.target;
+            const data = new FormData(form);
 
-      const form = e.target;
-      const data = new FormData(form);
+            await fetch(form.action, {
+                method: 'POST',
+                body: data,
+                headers: { 'Accept': 'application/json' }
+            });
 
-      // Отправляем данные в фоне
-      await fetch(form.action, {
-        method: 'POST',
-        body: data,
-        headers: { 'Accept': 'application/json' }
-      });
+            const popup = document.getElementById('popup');
+            popup.style.display = 'block';
 
-      // Показываем всплывающее окно
-      const popup = document.getElementById('popup');
-      popup.style.display = 'block';
+            setTimeout(() => {
+                popup.style.animation = 'fadeOut 0.3s ease forwards';
+                setTimeout(() => popup.style.display = 'none', 300);
+            }, 3000);
 
-      // Автоматически скрываем через 3 секунды
-      setTimeout(() => {
-        popup.style.animation = 'fadeOut 0.3s ease forwards';
-        setTimeout(() => popup.style.display = 'none', 300);
-      }, 3000);
-
-      // Очищаем форму
-      form.reset();
-    });
-  </script>
+            form.reset();
+        });
+    </script>
 
 </body>
 </html>
-
