--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .hero {
             position: relative;
             height: 100vh;
-            background: url('ноут.jpg') center/cover no-repeat; /* 💻 для ноутбуков */
+            background: url('photo2.jpg') center/cover no-repeat; /* 💻 для ноутбуков */
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -232,7 +232,7 @@
 
     <!-- 💫 Главный экран -->
     <div class="hero">
-        <h1>IT'S MY<br>BIRTHDAY PARTY🎉</h1>
+        <h1>IT'S MY BIRTHDAY PARTY🎉</h1>
     </div>
 
     <!-- 🎂 Подробности -->
