--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .hero {
             position: relative;
             height: 100vh;
-            background: url('photo2.jpg') center/cover no-repeat; /* 💻 для ноутбуков */
+            background: url('photo2.jpg') center no-repeat; /* 💻 для ноутбуков */
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -34,7 +34,7 @@
         /* 📱 Для телефонов — другая картинка */
         @media (max-width: 768px) {
             .hero {
-                background: url('photo3.jpg') center/cover no-repeat;
+                background: url('photo3.jpg') center no-repeat;
             }
         }
 
@@ -63,7 +63,7 @@
         @media (max-width: 600px) {
             .hero h1 {
                 font-size: 2.3em;
-                top: 5%;
+                top: 15%;
             }
         }
 
@@ -249,7 +249,7 @@
         <div class="event-info">
             <div class="info-item">
                 <h3>25</h3>
-                <p>Октября</p>
+                <p>октября</p>
             </div>
             <div class="divider"></div>
             <div class="info-item">
