--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
         /* 🎀 Блок с 3 столбцами */
         .event-info {
+            font-family: 'Roboto Slab', serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -325,5 +326,3 @@
 
 </body>
 </html>
-
-
