--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Party 🎉</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -14,7 +14,7 @@
 
         body {
             margin: 0;
-            font-family: 'Playfair Display', serif;
+            font-family: 'Roboto Slab', serif; /* основной шрифт для всей страницы */
             color: #fff;
             text-align: center;
             background: #f7f7f7;
@@ -50,7 +50,7 @@
             z-index: 1;
             top: 10%;
             transform: translateY(-20%);
-            font-family: 'Playfair Display', serif; /* ← теперь обычный шрифт */
+            font-family: 'Playfair Display', serif; /* только этот заголовок другой шрифт */
             font-weight: 700;
             font-size: 4em;
             color: #fff;
@@ -106,7 +106,6 @@
 
         .highlight-title {
             display: inline-block;
-            font-family: 'Roboto Slab', serif;
             font-weight: 700;
             font-size: 1.6em;
             text-transform: uppercase;
@@ -116,7 +115,6 @@
 
         /* 🎀 Блок с 3 столбцами */
         .event-info {
-            font-family: 'Roboto Slab', serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -124,7 +122,6 @@
             margin-top: 2em;
             flex-wrap: wrap;
             color: #222;
-            font-family: 'Playfair Display', serif;
         }
 
         .info-item {
@@ -132,16 +129,10 @@
             min-width: 150px;
         }
 
-            .info-item h3 {
-                font-size: 2.5em;
-                color: #000;
+            .info-item h3, .info-item p, .info-item h4, .info-item h5 {
                 margin: 0;
-            }
-
-            .info-item p {
-                margin: 0;
-                font-size: 1.2em;
                 color: #333;
+                font-size: 1.2em;
             }
 
         .divider {
